# platform

./: README.md
modules/bounded-application-workflow/: README.md  pyproject.toml
modules/bounded-application-workflow/app/: parser.py
modules/bounded-application-workflow/app/agents/: __init__.py  contracts.py  decision_rules.py  default.py  llm_signal_extraction.py  orchestration.py  signal_extraction.py  wiring.py  workflow_planning.py
modules/bounded-application-workflow/app/api/: main.py
modules/bounded-application-workflow/app/domain/: __init__.py  job_signals.py  models.py  workflow_run.py  workflow_state.py
modules/bounded-application-workflow/app/evaluation/: metrics.py  report.py  runner.py
modules/bounded-application-workflow/app/llm/: __init__.py  client.py
modules/bounded-application-workflow/app/runtime/: __init__.py  agent_identity.py  config_loader.py  config_registry.py  prompt_registry.py  result.py  runtime.py  runtime_config.py  signal_extractor_config.py
modules/bounded-application-workflow/app/services/: __init__.py  extractor.py  (+3 more)
modules/bounded-application-workflow/tests/: conftest.py  fixture_helpers.py  llm_helpers.py  test_agent_contracts.py  test_agents.py  test_api.py  test_create_agents.py  test_decision_rules.py  test_domain.py  test_domain_models.py  test_extractor.py  test_job_signals.py  test_llm_signal_extractor.py  test_matcher.py  test_orchestration.py  test_parser.py  test_policy.py  test_profile_matching.py  test_signal_extraction.py  test_state_machine.py  test_workflow.py  test_workflow_integration.py  test_workflow_run.py
(+40 files in other folders)
