[tool.poetry]
name = "bounded-application-workflow"
version = "0.1.0"
description = "Evaluate professional opportunities against a user profile."
authors = ["Ana Stanojevic"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = { extras = ["standard"], version = "^0.32.0" }
pydantic = "^2.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
httpx = "^0.28"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
