[project]
name = "bounded-application-workflow"
version = "0.1.0"
description = "Evaluate professional opportunities against a user profile."
authors = [{ name = "Ana Stanojevic" }]
readme = "README.md"
requires-python = ">=3.14,<4.0"
dependencies = [
    "fastapi>=0.139",
    "uvicorn[standard]>=0.51",
    "pydantic>=2.13",
    "openai>=2.46",
    "pydantic-ai>=2.13",
    "langgraph>=1.2",
    "logfire>=4.37",
    "pydantic-evals>=2.13",
]

[tool.poetry]
packages = [{ include = "app" }]

[tool.poetry.group.dev.dependencies]
pytest = "^9.0"
httpx = "^0.28"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-m 'not llm'"
markers = [
    "llm: live OpenAI signal extraction eval (requires OPENAI_API_KEY; run with: pytest -m llm)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
